--- a/clientside/assets/css/style.css
+++ b/clientside/assets/css/style.css
@@ -244,6 +244,7 @@ textarea {
     justify-content: center;
     width: 40px;
     height: 40px;
+    margin-top: 20px;
 }
 
 .form-note-icon i {
@@ -440,4 +441,3 @@ h2 {
         top: 85px;
     }
 }
-
